// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostEdit component Applies className to outermost element 1`] = `
<div
  className="food"
>
  <h3>
    <input
      onChange={[Function]}
      type="text"
      value="Hi Roy"
    />
  </h3>
  <div>
    Lorem ipsum, etc.
  </div>
</div>
`;

exports[`PostEdit component Matches snapshot with basic props 1`] = `
<div
  className="post-wrapper"
>
  <h3>
    <input
      onChange={[Function]}
      type="text"
      value="Hi Roy"
    />
  </h3>
  <div>
    Lorem ipsum, etc.
  </div>
</div>
`;
